tests/snapshots/golden_python__python_auth_manager_py_all_four_schemes.snap
---
source: tests/golden_python.rs
expression: contents
---
"""Multi Scheme API MCP server — generated by mcpify. Do not hand-edit.

Selects exactly one active auth strategy per deployment, chosen via the
`auth_method` config value (REQ-1.2.3) — there is no runtime engine for
resolving multiple simultaneously-required schemes.
"""

from __future__ import annotations

import json
import os

from ..core.config import ENV_PREFIX, AuthMethod, Transport
from ..core.credential_storage import load_credential, save_credential
from .auth_strategy import AuthConfig, AuthStrategy, Credentials
from .errors import NoActiveCredentialsError
from .request_credentials import RequestCredentials
from .strategies import oauth1
from .strategies import StubAuthStrategy
from .strategies import BasicAuthStrategy
from .strategies import PatAuthStrategy
from .strategies import OAuth1Strategy
from .strategies import OAuth2Strategy

CREDENTIAL_ACCOUNT = "active-credentials"


def header_location_for(auth_method: AuthMethod) -> tuple[str, str]:
    """Where `auth_method`'s credential value travels on the wire — used
    only by the HTTP-transport auth-gate/extractor (`http.auth_extractor`)
    to know which incoming header to read; stdio never calls this.
    """
    locations: dict[AuthMethod, tuple[str, str]] = {
        AuthMethod.BASIC: ("header", "Authorization"),
        AuthMethod.PAT: ("header", "Authorization"),
        AuthMethod.OAUTH2: ("header", "Authorization"),
        AuthMethod.OAUTH1: ("none", ""),
    }
    return locations[auth_method]


def strategy_for(auth_method: AuthMethod) -> AuthStrategy:
    strategies: dict[AuthMethod, type[AuthStrategy]] = {
        AuthMethod.BASIC: BasicAuthStrategy,
        AuthMethod.PAT: PatAuthStrategy,
        AuthMethod.OAUTH2: OAuth2Strategy,
        AuthMethod.OAUTH1: OAuth1Strategy,
    }
    return strategies.get(auth_method, StubAuthStrategy)()


class AuthManager:
    def __init__(self, auth_method: AuthMethod) -> None:
        self._auth_method = auth_method
        self._strategy = strategy_for(auth_method)
        self._cached_credentials: Credentials | None = None

    async def login(self, config: AuthConfig) -> Credentials:
        credentials = await self._strategy.authenticate(config)
        self._cached_credentials = credentials
        save_credential(CREDENTIAL_ACCOUNT, json.dumps(credentials))
        return credentials

    def set_credentials(self, credentials: Credentials) -> None:
        """Seeds in-memory credentials directly, bypassing OS-keychain/file
        storage entirely — for tests (which must never touch the real OS
        keychain as a side effect of running) and for callers that already
        hold validated credentials from elsewhere.
        """
        self._cached_credentials = credentials

    async def credentials(self) -> Credentials:
        if self._cached_credentials is not None and self._strategy.validate_credentials(
            self._cached_credentials
        ):
            return await self._normalize_credentials(self._cached_credentials)

        if (env_credentials := await self._credentials_from_env()) is not None:
            normalized = await self._normalize_credentials(env_credentials)
            self._cached_credentials = normalized
            return normalized

        stored = load_credential(CREDENTIAL_ACCOUNT)
        if stored is not None:
            parsed: Credentials = json.loads(stored)
            if self._strategy.validate_credentials(parsed):
                normalized = await self._normalize_credentials(parsed)
                self._cached_credentials = normalized
                save_credential(CREDENTIAL_ACCOUNT, json.dumps(normalized))
                return normalized
            # A blob with a refresh token has completed the initial
            # exchange at some point (it just expired) — use the cheap
            # refresh path. A blob with neither a valid access token nor a
            # refresh token is straight out of the setup wizard (a raw
            # authorization_code, never exchanged yet), so fall through to
            # the full exchange instead of giving up.
            exchanged: Credentials | None = None
            try:
                exchanged = await self._strategy.refresh_token(parsed)
            except Exception:  # noqa: BLE001 - any strategy-specific refresh failure falls through to a full re-authenticate, not a crash
                exchanged = None
            if exchanged is None:
                try:
                    exchanged = await self._strategy.authenticate(parsed)
                except Exception:  # noqa: BLE001 - any strategy-specific auth failure surfaces as NoActiveCredentialsError below, not a crash
                    exchanged = None
            if exchanged is not None:
                normalized = await self._normalize_credentials(exchanged)
                self._cached_credentials = normalized
                save_credential(CREDENTIAL_ACCOUNT, json.dumps(normalized))
                return normalized

        raise NoActiveCredentialsError(self._auth_method.value)

    async def _credentials_from_env(self) -> Credentials | None:
        """`.env.example` documents `OUT_TOKEN`/`_API_KEY`
        (pat/apiKey) and `OUT_USERNAME`/`_PASSWORD` (basic)
        as ways to supply credentials without a prior `setup` run — read
        them here, keyed by the resolved auth method, before falling back to
        the stored-credential lookup. Never persisted to the credential
        store: these are meant to be supplied fresh by the environment each
        run.
        """
        method = self._auth_method.value
        if method == "pat":
            token = os.environ.get(f"{ENV_PREFIX}_TOKEN") or os.environ.get(
                f"{ENV_PREFIX}_API_KEY"
            )
            if token:
                return await self._strategy.authenticate({"token": token})
        elif method == "apiKey":
            api_key = os.environ.get(f"{ENV_PREFIX}_TOKEN") or os.environ.get(
                f"{ENV_PREFIX}_API_KEY"
            )
            if api_key:
                return await self._strategy.authenticate({"api_key": api_key})
        elif method == "basic":
            username = os.environ.get(f"{ENV_PREFIX}_USERNAME")
            password = os.environ.get(f"{ENV_PREFIX}_PASSWORD")
            if username and password:
                return await self._strategy.authenticate(
                    {"username": username, "password": password}
                )
        return None

    async def _normalize_credentials(self, credentials: Credentials) -> Credentials:
        if any(
            key in credentials
            for key in ("authorization_header", "api_key", "request_header_name")
        ):
            return dict(credentials)

        if access_token := credentials.get("access_token"):
            normalized = dict(credentials)
            normalized["authorization_header"] = f"Bearer {access_token}"
            return normalized

        return await self._strategy.authenticate(credentials)

    async def apply_auth_headers(
        self,
        headers: dict[str, str],
        method: str,
        url: str,
        transport: Transport,
        request_override: RequestCredentials | None = None,
    ) -> dict[str, str]:
        """Decorates outgoing request headers with credentials for
        `transport`: on `Transport.HTTP`, `request_override` (extracted
        per-request from the caller's own headers — see
        `http.auth_extractor`) is the *only* source ever consulted, since
        HTTP deployments must never leak the operator's local
        config/keychain secrets to a caller who didn't supply their own; a
        missing override is a hard error, not a fallback. On
        `Transport.STDIO`, `request_override` is ignored and behavior is
        unchanged from before HTTP-transport support existed:
        `self.credentials()` (config cascade + keychain).

        API-key placement (header vs. query, and the header/param name)
        defaults to an `X-Api-Key` header here; a scheme declaring a
        different location is one of Story P6's api-client
        responsibilities to refine, not this manager's — `request_override`'s
        `request_header_name`/`request_header_value` pair is the one
        exception, since the HTTP path already knows the scheme's declared
        header name (`PyAuthSchemeView.header_name`) at generation time.
        """
        if transport is Transport.HTTP and self._auth_method is AuthMethod.OAUTH1:
            raise ValueError(
                "OAuth1 is not supported over HTTP transport: its signature must be "
                "recomputed per request against the destination URL using the server's "
                "consumer key/secret, which a simple incoming-header relay cannot "
                "provide. Use stdio transport for OAuth1-authenticated APIs."
            )

        if transport is Transport.HTTP:
            if request_override is None:
                raise ValueError(
                    "no credentials were supplied on this HTTP request; local "
                    "config/env/keychain is never used as a fallback over HTTP transport"
                )
            credentials = request_override.to_credentials_map()
        else:
            credentials = await self.credentials()
        if self._auth_method is AuthMethod.OAUTH1:
            consumer_key = credentials.get("consumer_key")
            private_key = credentials.get("private_key")
            if not consumer_key or not private_key:
                raise ValueError("OAuth1 credentials missing consumer_key/private_key")
            token = credentials.get("token")
            headers = dict(headers)
            headers["Authorization"] = oauth1.build_authorization_header(
                consumer_key, private_key, token, method, url
            )
            return headers

        headers = dict(headers)
        if request_header_name := credentials.get("request_header_name"):
            headers[request_header_name] = credentials.get("request_header_value", "")
        elif authorization_header := credentials.get("authorization_header"):
            headers["Authorization"] = authorization_header
        elif api_key := credentials.get("api_key"):
            # Prefer the scheme's real configured header name (carried
            # alongside `api_key` as `api_key_header_name`) over the literal
            # "X-Api-Key" default — e.g. Octopus Deploy needs
            # `X-Octopus-ApiKey`. Legacy/directly-set credentials that
            # predate `api_key_header_name` fall back to `header_location_for`.
            header_name = credentials.get("api_key_header_name")
            if not header_name:
                _, header_name = header_location_for(self._auth_method)
            headers[header_name or "X-Api-Key"] = api_key
        return headers
