tests/snapshots/golden_python__python_config_py_all_four_schemes.snap
---
source: tests/golden_python.rs
expression: contents
---
"""Multi Scheme API MCP server — generated by mcpify. Do not hand-edit.

The strict, stop-at-first-match configuration cascade (REQ-2.2): CLI flags
-> env vars -> local file (`./out.config.yml`) -> home file
(`~/.out/config.yml`) -> system file
(`/etc/out/config.yml`) -> install-dir file -> built-in
defaults (`Config`'s own field defaults). Each layer is a plain dict merged
lowest-priority-first, then validated once through the typed `Config`
model — mirrors `targets::rust::steps::enterprise`'s `config_manager.rs`,
substituting `pydantic-settings`' typed model for `serde`'s.
"""

from __future__ import annotations

import os
from enum import Enum
from pathlib import Path
from typing import Any

import yaml
from pydantic import Field
from pydantic_settings import BaseSettings

from .errors import ConfigurationError

ENV_PREFIX = "OUT"
CONFIG_DIR_NAME = ".out"
LOCAL_CONFIG_FILE = "out.config.yml"
SYSTEM_CONFIG_FILE = Path("/etc/out/config.yml")


class AuthMethod(str, Enum):
    BASIC = "basic"
    PAT = "pat"
    OAUTH2 = "oauth2"
    OAUTH1 = "oauth1"


class Transport(str, Enum):
    STDIO = "stdio"
    HTTP = "http"


class Config(BaseSettings):
    url: str
    auth_method: AuthMethod
    # mcpify:versions:begin
    api_version: str = "default"
    # mcpify:versions:end
    log_level: str = "info"
    rate_limit: int = 100
    timeout_ms: int = 30_000
    cache_size: int = 500
    retry_attempts: int = 3
    transport: Transport = Transport.STDIO
    host: str = "127.0.0.1"
    port: int = 3000
    cors_allow: str | None = Field(default=None)


def _home_dir() -> Path:
    """`HOME` first, then Windows' `USERPROFILE`, then cwd — plain
    `HOME`-only resolution silently falls back to `.` on Windows, since
    `HOME` is typically unset there.
    """
    return Path(os.environ.get("HOME") or os.environ.get("USERPROFILE") or ".")


def _install_dir() -> Path:
    return Path(__file__).resolve().parent.parent


def local_config_path() -> Path:
    return Path(LOCAL_CONFIG_FILE)


def home_config_path() -> Path:
    return _home_dir() / CONFIG_DIR_NAME / "config.yml"


def system_config_path() -> Path:
    return SYSTEM_CONFIG_FILE


def install_dir_config_path() -> Path:
    return _install_dir() / "config.yml"


def _read_yaml_if_exists(path: Path) -> dict[str, Any]:
    try:
        contents = path.read_text()
    except OSError:
        return {}
    loaded = yaml.safe_load(contents)
    return loaded if isinstance(loaded, dict) else {}


_ENV_SUFFIXES = {
    "url": "URL",
    "auth_method": "AUTH_METHOD",
    "api_version": "API_VERSION",
    "log_level": "LOG_LEVEL",
    "transport": "TRANSPORT",
    "host": "HOST",
    "cors_allow": "CORS_ALLOW",
    "rate_limit": "RATE_LIMIT",
    "timeout_ms": "TIMEOUT_MS",
    "cache_size": "CACHE_SIZE",
    "retry_attempts": "RETRY_ATTEMPTS",
    "port": "PORT",
}


def _env_overrides() -> dict[str, Any]:
    overrides: dict[str, Any] = {}
    for config_key, env_suffix in _ENV_SUFFIXES.items():
        value = os.environ.get(f"{ENV_PREFIX}_{env_suffix}")
        if value is not None:
            overrides[config_key] = value
    return overrides


def load_config(cli_flags: dict[str, Any] | None = None) -> Config:
    layers = [
        cli_flags or {},
        _env_overrides(),
        _read_yaml_if_exists(local_config_path()),
        _read_yaml_if_exists(home_config_path()),
        _read_yaml_if_exists(system_config_path()),
        _read_yaml_if_exists(install_dir_config_path()),
    ]

    # Lowest-priority layer merged first, each higher-priority layer merged
    # on top — the first layer (`cli_flags`) always wins, matching the
    # cascade's stop-at-first-match ordering.
    merged: dict[str, Any] = {}
    for layer in reversed(layers):
        merged.update(layer)

    try:
        return Config(**merged)
    except Exception as err:  # pydantic.ValidationError, deliberately caught broadly
        raise ConfigurationError(f"invalid configuration: {err}") from err


def built_in_defaults() -> dict[str, Any]:
    """The lowest-priority cascade layer: `Config`'s own field defaults,
    e.g. for `out config`'s cascade-by-source display.
    `url`/`auth_method` have no default (they're required), so they're
    absent here — every other tier can still supply them.
    """
    defaults: dict[str, Any] = {}
    for name, field in Config.model_fields.items():
        if field.is_required():
            continue
        value = field.default
        defaults[name] = value.value if isinstance(value, Enum) else value
    return defaults
