tests/snapshots/golden_python__python_file_tree_single_basic_scheme.snap
---
source: tests/golden_python.rs
expression: file_tree(&output_dir)
---
[
    ".env.example",
    ".githooks/pre-commit",
    ".github/workflows/ci.yml",
    ".github/workflows/docker-build.yml",
    ".github/workflows/release.yml",
    ".gitignore",
    ".mcpify/settings.yaml",
    "Dockerfile",
    "LICENSE",
    "README.md",
    "docker-compose.yml",
    "main.py",
    "mcp_store.db",
    "pyproject.toml",
    "scripts/coverage.sh",
    "scripts/profile.sh",
    "src/out/__init__.py",
    "src/out/auth/__init__.py",
    "src/out/auth/auth_manager.py",
    "src/out/auth/auth_strategy.py",
    "src/out/auth/errors.py",
    "src/out/auth/request_credentials.py",
    "src/out/auth/strategies/__init__.py",
    "src/out/auth/strategies/basic.py",
    "src/out/auth/strategies/stub.py",
    "src/out/cli/__init__.py",
    "src/out/cli/call.py",
    "src/out/cli/config.py",
    "src/out/cli/get.py",
    "src/out/cli/search.py",
    "src/out/cli/setup.py",
    "src/out/cli/setup_wizard.py",
    "src/out/cli/test_connection.py",
    "src/out/cli/version.py",
    "src/out/cli/versions.py",
    "src/out/core/__init__.py",
    "src/out/core/cache.py",
    "src/out/core/circuit_breaker.py",
    "src/out/core/config.py",
    "src/out/core/credential_storage.py",
    "src/out/core/errors.py",
    "src/out/core/health_check.py",
    "src/out/core/logger.py",
    "src/out/core/mcp_server.py",
    "src/out/core/rate_limiter.py",
    "src/out/core/tracing.py",
    "src/out/data/__init__.py",
    "src/out/data/store.py",
    "src/out/http/__init__.py",
    "src/out/http/auth_extractor.py",
    "src/out/http/localhost_detector.py",
    "src/out/http/metrics.py",
    "src/out/http/server.py",
    "src/out/http/types.py",
    "src/out/services/__init__.py",
    "src/out/services/api_client.py",
    "src/out/services/embedding_service.py",
    "src/out/services/populate_embeddings.py",
    "src/out/tools/__init__.py",
    "src/out/tools/call_tool.py",
    "src/out/tools/get_tool.py",
    "src/out/tools/search_tool.py",
    "src/out/validation/__init__.py",
    "src/out/validation/generated_schemas.json.zst",
    "src/out/validation/validator.py",
    "tests/conftest.py",
    "tests/e2e/test_mcp_server.py",
    "tests/integration/test_call_pipeline.py",
    "tests/packaging/test_embeddings_populated.py",
    "tests/unit/auth/test_basic.py",
    "tests/unit/auth/test_stub.py",
    "tests/unit/core/test_cache.py",
    "tests/unit/core/test_circuit_breaker.py",
    "tests/unit/core/test_config.py",
    "tests/unit/core/test_rate_limiter.py",
    "tests/unit/services/test_embedding_service.py",
    "tests/unit/tools/test_call_tool.py",
    "tests/unit/tools/test_get_tool.py",
    "tests/unit/tools/test_search_tool.py",
    "tests/unit/validation/test_validator.py",
]
